# rust-code-agent-sdks

./: .gitignore  Cargo.toml  README.md  claude.md
.github/workflows/: codex-schema-drift.yml
claude-codes/: CHANGELOG.md  Cargo.toml  README.md  build_examples.sh
claude-codes/examples/: basic_repl.rs  parse_transcripts.rs
claude-codes/src/: cli.rs  client_async.rs  client_sync.rs  error.rs  lib.rs  tool_inputs.rs  version.rs
claude-codes/src/io/: claude_input.rs  content_blocks.rs  control.rs  message_types.rs  mod.rs  result.rs  wrap_audit.rs
claude-codes/test_cases/subagent_sessions/: explore_count_files.jsonl  general_purpose_compute.jsonl
claude-codes/tests/: integration_tests.rs  subagent_wrapping_tests.rs  tool_input_tests.rs
codex-codes/: CHANGELOG.md  Cargo.toml  README.md
codex-codes/examples/: async_client.rs  basic_repl.rs  schema_coverage.rs  sync_client.rs
codex-codes/src/: cli.rs  client_async.rs  client_sync.rs  error.rs  jsonrpc.rs  lib.rs  messages.rs  protocol.rs  stderr_drain.rs  version.rs
codex-codes/src/io/: events.rs  items.rs  options.rs
codex-codes/src/protocol/: mod.rs  v1.rs
codex-codes/src/protocol/v2/: account.rs  item.rs  mcp.rs  mod.rs  notification.rs  remote_control.rs  thread.rs  thread_data.rs  turn.rs
codex-codes/src/protocol_generated/: mod.rs  samples.rs  types.rs
codex-codes/test_cases/captures/: file_change.jsonl
codex-codes/tests/: integration_tests.rs  live_client_tests.rs  protocol_name_conformance.rs
codex-codes/tests/test_data/upstream/: PINNED_TAG.txt
codex-codes/tools/: sync-upstream-bindings.sh
scripts/: check_codex_schema_drift.py  codegen_protocol.py
