[workspace]
members = ["claude-codes", "codex-codes"]
resolver = "2"

# Dependencies shared across workspace crates. Members reference these with
# `dep = { workspace = true }` so versions move in lockstep.
[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
which = "8.0.2"
env_logger = "0.11.9"

# Lint policy shared across workspace crates. Members opt in with
# `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"
