[package]
name = "claude-codes"
version = "2.1.117"
edition = "2021"
rust-version = "1.85"
authors = ["Matthew Goodman <d3a6d0cec0c16f3e@inboxnegative.com>"]
description = "A tightly typed Rust interface for the Claude Code JSON protocol"
documentation = "https://docs.rs/claude-codes"
homepage = "https://github.com/meawoppl/rust-code-agent-sdks"
repository = "https://github.com/meawoppl/rust-code-agent-sdks"
license = "Apache-2.0"
readme = "README.md"
keywords = ["claude", "ai", "json", "protocol", "api"]
categories = ["api-bindings", "encoding", "parsing"]
exclude = [
    "test_cases/",
    "*.sh",
]

[dependencies]
# Core dependencies always needed for types
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
uuid = { version = "1.18.0", default-features = false, features = ["serde"] }

# Optional dependencies for clients
anyhow = { version = "1.0.99", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }
log = { version = "0.4.27", optional = true }
which = { version = "8.0.2", optional = true }

[features]
default = ["types", "sync-client", "async-client"]
types = []
sync-client = ["types", "anyhow", "log", "uuid/v4", "dep:which"]
async-client = ["types", "anyhow", "tokio", "log", "uuid/v4", "dep:which"]
integration-tests = []
log = ["dep:log"]

[dev-dependencies]
env_logger = "0.11.8"
base64 = "0.22.1"
uuid = { version = "1.18.0", features = ["v4"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"

[[example]]
name = "async_client"
required-features = ["async-client"]

[[example]]
name = "basic_repl"
required-features = ["async-client"]

[[example]]
name = "sync_client"
required-features = ["sync-client"]
